2011-10-14  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/s390/fpu/libm-test-ulps: Adjust ULPs for jn tests.

	* sysdeps/x86_64/fpu/fraiseexcpt.c: Fix last change.

2011-10-13  Roland McGrath  <roland@hack.frob.com>

	[BZ #13291]
	* manual/string.texi (String/Array Comparison): Typo fix in strverscmp.

2011-10-13  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/x86_64/fpu/fraiseexcpt.c: Add __feraiseexcept alias.
	* sysdeps/x86_64/fpu/feupdateenv.c: Use __feraiseexcept instead of
	feraiseexcept.

	* sysdeps/x86_64/memrchr.S: Check for zero size.

	* string/stratcliff.c: Add memrchr tests.

2011-10-12  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	memchr-sse2 memchr-sse2-bsf memrchr-sse2 memrchr-sse2-bsf memrchr-c
	rawmemchr-sse2 rawmemchr-sse2-bsf.
	* sysdeps/i386/i686/multiarch/memchr.S: New file.
	* sysdeps/i386/i686/multiarch/memchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/memchr-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr-c.c: New file.
	* sysdeps/i386/i686/multiarch/memrchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr-sse2-bsf.S: New file.
	* string/memrchr.c (MEMRCHR): New macro.

2011-10-12  Ulrich Drepper  <drepper@gmail.com>

	Add integration with gcc's -ffinite-math-only and optimize wrapper
	functions in libm.
	* Versions.def: Define GLIBC_2.15 version for libm.
	* math/Makefile (headers): Add bits/math-finite.h.
	* math/bits/math-finite.h: New file.
	* sysdeps/ia64/fpu/bits/math-finite.h: New file.
	* math/Versions [libm] (GLIBC_2.15): Export __*_finite symbols.
	* math/e_acoshl.c: Add __*_finite alias.
	* math/e_acosl.c: Likewise.
	* math/e_asinl.c: Likewise.
	* math/e_atan2l.c: Likewise.
	* math/e_atanhl.c: Likewise.